working on some stufff

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+.body div {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif !important;
+}
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
